[metadata]
name = trifid
description = Machine Learning-based tool to assess the functional relevance of splice isoforms
url = https://github.com/fpozoc/trifid
long_description = file: README.md
author = Fernando Pozo
author_email = fpozoc@gmx.com
keywords = python
license = GNU General Public License v3.0
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True
packages=find:
install_requires =
    # Add project specific dependencies
    # Stuff easy to break with updates

    # Stable stuff usually backward compatible
    click
    coverage
    loguru
    python-dotenv
    pre-commit
    gh

[options.package_data]
* = *.txt, *.md
config =  ['config/config.yaml']
features = ['config/features.yaml']

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    pylint
    isort
    mypy
    %(test)s
    %(docs)s

extra =
    matplotlib
    altair
    altair_saver
    eli5'
    shap'
    mlxtend'
    rfpimp

interactive =
    jupyterlab
    watermark
